@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add params, param_names, param, and param_array general request parameter accessors
 
 0.018     2021-05-19 18:12:06 EDT
   - CGI::Tiny::Multipart::parse_multipart_form_data now takes a single tempfiles option instead of all_tempfiles and no_tempfiles
